@@ -1,3 +1,9 @@
+2011-01-31  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* tag V01-05-09
+	* bug fix to ConfigurationTreeActions.importReferenceContainer()
+	* also include SmartPrescaleEditor, first version
+
 2010-11-12  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
 	* tag V01-05-08
